(feat) : reset the currentindex if user close the search menu

--- a/src/components/SearchModal/SearchMenu.astro
+++ b/src/components/SearchModal/SearchMenu.astro
@@ -65,11 +65,13 @@ document.addEventListener('astro:page-load', () => {
         const handleKeyDown = (e : KeyboardEvent) => {
             if (e.key === 'k' && (e.metaKey || e.ctrlKey)) {
                 toggleModal(searchModalElem);
+                currentIndex = -1;
                 if (searchModalElem.getAttribute('aria-hidden') === 'false') {
                     searchInputElem.focus();
                 }
             } else if (e.key === 'Escape') {
                 toggleModal(searchModalElem);
+                currentIndex = -1;
             } else if (e.key === 'ArrowDown' || e.key === 'ArrowUp') {
                 if (currentIndex === -1 && e.key === 'ArrowDown') {
                     currentIndex = 0;
