--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
-import SearchMenu from '@/components/SearchModal/SearchMenu.astro';
+import Launcher from '@/components/Launcher/Launcher.astro';
 
 
 
@@ -33,7 +33,7 @@ import SearchMenu from '@/components/SearchModal/SearchMenu.astro';
 			<slot />
 			<Footer />
 		</div>
-		<SearchMenu />
+		<Launcher />
 	</body>
 
 </html>
