--- a/src/components/Launcher/LauncherOverlay.astro
+++ b/src/components/Launcher/LauncherOverlay.astro
@@ -6,7 +6,7 @@
 <div 
 id="search-menu"
 aria-hidden="true"
-data-state="close"
+data-state="open"
 class="fixed w-full z-20 inset-0 px-6 pt-12 bg-black/40 backdrop-blur-xs data-[state=open]:pointer-events-auto data-[state=close]:pointer-events-none data-[state=close]:hidden" 
 >
   <slot/>
