(feat) : add resume to the project and make it readable in socialLinks

--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -24,7 +24,7 @@
     </a>
   </li>
   <li class="group transition-all ease-linear duration-300 hover:text-neutral-500 hover:scale-95">
-    <a href="TODO" aria-label="Mon CV" target="_blank">
+    <a href="/CV_2025.pdf" aria-label="Mon CV" target="_blank">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/></svg>
     </a>
   </li>
