--- a/src/components/Launcher/Launcher.astro
+++ b/src/components/Launcher/Launcher.astro
@@ -1,6 +1,7 @@
 ---
 import LauncherOverlay from "./LauncherOverlay.astro";
 import LauncherListItem from "./LauncherListItem.astro";
+import Shortcut from "../ui/Shortcut.astro";
 
 
 ---
@@ -12,12 +13,10 @@ import LauncherListItem from "./LauncherListItem.astro";
     tabindex="-1"
     class="relative mx-auto w-full top-20 z-999 max-w-xl  text-neutral-500 dark:text-neutral-400 bg-neutral-100 dark:bg-neutral-800 inset-ring inset-ring-neutral-950/8 dark:inset-ring-white/2 rounded-lg"
   >
-    <header class="flex items-center justify-between gap-2 px-3 py-3">
-      <span>Command</span>
+    <header class="flex items-center justify-between gap-2 px-4 py-4">
+      <span>Launcher</span>
       <button id="close-search-button" class="cursor-pointer">
-        <kbd class="text-xs/4 text-neutral-500 dark:text-neutral-400 rounded bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2  py-1 px-2">
-          esc
-        </kbd>
+        <Shortcut>esc</Shortcut>
       </button>
     </header>
     <div class="py-2">
