--- a/src/components/ui/Shortcut.astro
+++ b/src/components/ui/Shortcut.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<kbd class="font-sans text-xs/4 size-4.5 inline-flex items-center justify-center text-neutral-500 dark:text-neutral-400 gap-1 rounded bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2  py-1 px-2">
-  <slot />
+<kbd class="text-xs/4 text-neutral-500 dark:text-neutral-400 rounded bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2  py-1 px-2">
+  <slot/>
 </kbd>
