(feat) : Launcher items are now either a <a> or a <button>

--- a/src/components/Launcher/LauncherListItem.astro
+++ b/src/components/Launcher/LauncherListItem.astro
@@ -3,18 +3,29 @@ import Tag from "@/components/ui/Tag.astro";
 
 type Props = {
   title: string;
-  tagLabel? : string
+  tagLabel? : string;
+  href?: string;
 }
 
-const { title, tagLabel } = Astro.props as Props;
+const { title, tagLabel, href } = Astro.props as Props;
 ---
 
 <li 
   tabindex="0"
   role="menuitem"
-  class="inline-flex items-center gap-2  rounded-md hover:bg-neutral-900/2  text-neutral-500 w-full dark:hover:bg-white/5 dark:text-neutral-400 py-3 px-2 focus:outline-none focus:bg-neutral-900/5 dark:focus:bg-white/10"
+  class="font-normal text-sm/4 text-neutral-500 dark:text-neutral-400 w-full py-3 px-2 rounded-md focus:outline-none hover:bg-neutral-900/2 dark:hover:bg-white/5 focus:bg-neutral-900/5 dark:focus:bg-white/10"
 >
-  <slot />
-  <span class="flex-1">{title}</span>
-  {tagLabel && <Tag label={tagLabel} />}
+  {href ? (
+    <a href={href} class="inline-flex items-center gap-2 w-full">
+      <slot />
+      <span class="flex-1">{title}</span>
+      {tagLabel && <Tag label={tagLabel} />}
+    </a>
+  ) : (
+    <button type="button" class="text-left inline-flex items-center gap-2 w-full">
+      <slot />
+      <span class="flex-1">{title}</span>
+      {tagLabel && <Tag label={tagLabel} />}
+    </button>
+  )}
 </li>
