(feat) : user can now toggle theme in the launcher

--- a/src/components/Launcher/LauncherButton.astro
+++ b/src/components/Launcher/LauncherButton.astro
@@ -18,7 +18,7 @@ const LauncherElem = document.getElementById('search-menu');
 
 if (searchButtonElem && LauncherElem) {
   searchButtonElem.addEventListener('click', (e) => {
-    toggleModal(LauncherElem);
+    toggleModal();
   });
 }
 </script>
