--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -5,10 +5,11 @@ import logoTitan from "@/assets/logo_titan.png";
 import Tag from "./ui/Tag.astro";
 ---
 
-<div class="flex items-center rounded-xl gap-4 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20">
+<div class="flex flex-col items-start rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 sm:items-center sm:flex-row sm:gap-4">
   <div class="size-16 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
     <Image src={logoTitan} alt="Logo de Victor Lebecq" width="100" height="100" class="size-12 object-cover object-center" />
   </div>
+  <span class="text-sm sm:order-3">Mar 2024 - Nov 2024</span>
   <div class="flex-1">
     <h3 class="">Développeur Web Freelance </h3>
     <a href="https://titan-info.fr" target="_blank" class="text-sm text-neutral-500">Titan Informatique</a>
@@ -18,5 +19,4 @@ import Tag from "./ui/Tag.astro";
       <Tag label="Wordpress" />
     </div>
   </div>
-  <span class="text-sm">Mar 2024 - Nov 2024</span>
 </div>
