--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -9,7 +9,7 @@ import Tag from "./ui/Tag.astro";
   <div class="size-16 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
     <Image src={logoTitan} alt="Logo de Victor Lebecq" width="100" height="100" class="size-12 object-cover object-center" />
   </div>
-  <span class="text-sm sm:order-3">Mar 2024 - Nov 2024</span>
+  <span class="text-xs/4 sm:order-3">Mar 2024 - Nov 2024</span>
   <div class="flex-1">
     <h3 class="">Développeur Web Freelance </h3>
     <a href="https://titan-info.fr" target="_blank" class="text-sm text-neutral-500">Titan Informatique</a>
