--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
 ---
+import { getCollection } from 'astro:content';
+
 import Layout from '@/layouts/Layout.astro';
 import SocialLinks from '@/components/SocialLinks.astro';
 import ProjectCard from '@/components/ProjectCard.astro';
 import BlogArticle from '@/components/BlogArticle.astro';
 
 import logo from '@/assets/Logo_3D.png'
+
+const projects = await getCollection('projects');
+console.log(projects);
+
 
 ---
 
@@ -19,9 +25,9 @@ import logo from '@/assets/Logo_3D.png'
 	<div class="mt-12 sm:mt-16">
 		<h2 class="text-neutral-500 mb-6">[ Projets ]</h2>
 		<div class="group">
-			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
-			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
-			<ProjectCard title='Lorem ipsum dolor sit amet' description='Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.' illustration={logo} link='#' />
+			{projects.map((project) => (
+				<ProjectCard title={project.data.title} description={project.data.description} link={project.data.link} />
+			))}
 		</div>
 	</div>
 	<div class="mt-12 sm:mt-16">
