--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -1,22 +1,35 @@
 ---
 import { Image } from "astro:assets";
+import type { CollectionEntry } from "astro:content";
 
 import logoTitan from "@/assets/logo_titan.png";
 import Tag from "./ui/Tag.astro";
+
+type Props = {
+  experience: CollectionEntry<"experiences">;
+}
+
+const { experience } = Astro.props as Props;
+const { title, company, companyLogo, description, startDate, endDate, tags } = experience.data;
+
+const displayedStartDate = new Date(startDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
+const displayedEndDate = new Date(endDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
 ---
+
 
 <div class="flex flex-col items-start rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 sm:items-center sm:flex-row sm:gap-4">
   <div class="size-16 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
-    <Image src={logoTitan} alt="Logo de Victor Lebecq" width="100" height="100" class="size-12 object-cover object-center" />
+    <Image src={companyLogo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-12 object-cover object-center" />
   </div>
-  <span class="text-xs/4 sm:order-3">Mar 2024 - Nov 2024</span>
+  <span class="text-xs/4 sm:order-3">{displayedStartDate} - {displayedEndDate}</span>
   <div class="flex-1">
-    <h3 class="">Développeur Web Freelance </h3>
-    <a href="https://titan-info.fr" target="_blank" class="text-sm text-neutral-500">Titan Informatique</a>
-    <p class="text-sm !mt-0">lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium ipsam quibusdam vel iste animi vero tempore.</p>
+    <h3 class="">{title}</h3>
+    <a href="https://titan-info.fr" target="_blank" class="text-sm text-neutral-500">{company}</a>
+    <p class="text-sm !mt-0">{description}</p>
     <div class="space-x-1">
-      <Tag label="React" />
-      <Tag label="Wordpress" />
+      {tags.map((tag) => (
+        <Tag label={tag} />
+      ))}
     </div>
   </div>
 </div>
