--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -2,7 +2,6 @@
 import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
 
-import logoTitan from "@/assets/logo_titan.png";
 import Tag from "./ui/Tag.astro";
 
 type Props = {
@@ -10,7 +9,7 @@ type Props = {
 }
 
 const { experience } = Astro.props as Props;
-const { title, company, companyLogo, description, startDate, endDate, tags } = experience.data;
+const { title, company, companyLogo, companyUrl, description, startDate, endDate, tags } = experience.data;
 
 const displayedStartDate = new Date(startDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
 const displayedEndDate = new Date(endDate).toLocaleDateString("fr-FR", { month: 'numeric', year: 'numeric' });
@@ -24,7 +23,7 @@ const displayedEndDate = new Date(endDate).toLocaleDateString("fr-FR", { month: 
   <span class="text-xs/4 sm:order-3">{displayedStartDate} - {displayedEndDate}</span>
   <div class="flex-1">
     <h3 class="">{title}</h3>
-    <a href="https://titan-info.fr" target="_blank" class="text-sm text-neutral-500">{company}</a>
+    <a href={companyUrl} target="_blank" class="text-sm text-neutral-500">{company}</a>
     <p class="text-sm !mt-0">{description}</p>
     <div class="space-x-1">
       {tags.map((tag) => (
