(feat) : add the user agent check to display the right shortcut in the launcher buttun

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,6 +46,7 @@ const experiences = await getCollection('experiences');
 
   <div class="mt-12 sm:mt-16">
     <h2 class="text-neutral-500 mb-6">[ Catch me if you can ]</h2>
+    <p>Une question ? Un projet ? Trouvez moi sur mes différents réseaux</p>
     <SocialLinks />
 	</div>
 </Layout>
