--- a/src/components/Launcher/Launcher.astro
+++ b/src/components/Launcher/Launcher.astro
@@ -17,7 +17,7 @@ import LauncherListItem from "./LauncherListItem.astro";
         <div class="size-2 bg-neutral-800 dark:bg-neutral-100 rounded-full"/>
         Launcher
       </div>
-      <button id="close-search-button" class="cursor-pointer">
+      <button id="close-launcher-button" class="cursor-pointer">
         <Shortcut>esc</Shortcut>
       </button>
     </header>
@@ -69,7 +69,7 @@ import LauncherListItem from "./LauncherListItem.astro";
 
   document.addEventListener('astro:page-load', () => {
       const LauncherElem = document.getElementById('search-menu');
-      const closeSearchButtonElem = document.getElementById('close-search-button');
+      const closeSearchButtonElem = document.getElementById('close-launcher-button');
       let menuItems = document.querySelectorAll('[role="menuitem"]');
 
       let currentIndex = -1;
@@ -118,7 +118,7 @@ import LauncherListItem from "./LauncherListItem.astro";
           window.removeEventListener('keydown', handleKeyDown);
           window.removeEventListener('click', handleClickOutside);
       }
-      const closeSearchButtonElem = document.getElementById('close-search-button');
+      const closeSearchButtonElem = document.getElementById('close-launcher-button');
       if (closeSearchButtonElem) {
           closeSearchButtonElem.removeEventListener('click', toggleModal);
       }
