--- a/src/components/Launcher/LauncherButton.astro
+++ b/src/components/Launcher/LauncherButton.astro
@@ -2,17 +2,28 @@
 
 ---
 
-<button id="search-button" class="inline-flex items-center gap-1 rounded-lg bg-neutral-900/2 px-2 py-1 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2 cursor-pointer" aria-label="ouvrir la barre de recherche">
+<button id="launcher-button" class="inline-flex items-center gap-1 rounded-lg bg-neutral-900/2 px-2 py-1 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2 cursor-pointer" aria-label="ouvrir la barre de recherche">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="-ml-0.5 size-4 fill-neutral-600 dark:fill-neutral-500"><path fill-rule="evenodd" d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z" clip-rule="evenodd"></path></svg>
-  <kbd class="font-sans text-xs/4 text-neutral-500 dark:text-neutral-400">⌘K</kbd>
-  <kbd class="font-sans hidden text-xs/4 text-neutral-500 dark:text-neutral-400">Ctrl&nbsp;K</kbd>
+  <kbd id="mac_sc" class="font-sans text-xs/4 text-neutral-500 dark:text-neutral-400">⌘K</kbd>
+  <kbd id="other_sc" class="font-sans hidden text-xs/4 text-neutral-500 dark:text-neutral-400">Ctrl&nbsp;K</kbd>
 </button>
 
 <script>
 import { toggleModal } from '@/utils/launcher';
 document.addEventListener('astro:page-load', () => {
-  const searchButtonElem = document.getElementById('search-button');
+  const searchButtonElem = document.getElementById('launcher-button');
+  const macShortcutElem = document.getElementById('mac_sc');
+  const otherShortcutElem = document.getElementById('other_sc');
+
   if (!searchButtonElem) return;
+
+  const userAgent = navigator.userAgent;
+  const isUserOnMac = /Macintosh|Mac OS X/.test(userAgent);
+
+  if (!isUserOnMac) {
+    macShortcutElem?.classList.add('hidden');
+    otherShortcutElem?.classList.remove('hidden');
+  }
   
   searchButtonElem.addEventListener('click', (e) => {
     toggleModal();
