--- a/src/components/Launcher/LauncherSearchInput.astro
+++ b/src/components/Launcher/LauncherSearchInput.astro
@@ -4,7 +4,7 @@
 
 <label for="search-input" class="inline-flex font-sans text-base/4 gap-1 rounded  py-3 px-4 w-full">
   <input type="text" name="search-input" id="search-input" class="flex-1 pt-2 focus:outline-none focus:border-none font-light" placeholder="Rechercher..." aria-label="Rechercher" />
-  <button id="close-search-button" class="cursor-pointer">
+  <button id="close-launcher-button" class="cursor-pointer">
     <kbd class="text-xs/4 text-neutral-500 dark:text-neutral-400 rounded bg-neutral-900/2 inset-ring inset-ring-neutral-950/8 dark:bg-white/5 dark:inset-ring-white/2  py-1 px-2">
       esc
     </kbd>
