(style) : made the shortcut insight at the bottom of the launcher hidden on mobile

--- a/src/components/Launcher/Launcher.astro
+++ b/src/components/Launcher/Launcher.astro
@@ -52,7 +52,7 @@ import LauncherListItem from "./LauncherListItem.astro";
         </LauncherListCategory>
       </ul>
     </div>
-    <div class="flex items-center gap-1 text-xs mx-auto w-fit pb-4">
+    <div class="[@media(pointer:coarse)]:hidden flex items-center gap-1 text-xs mx-auto w-fit pb-4">
       utilise <Shortcut>↓</Shortcut> ou <Shortcut>↑</Shortcut>
     </div>
   </div>
