--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -17,8 +17,8 @@ const displayedEndDate = new Date(endDate).toLocaleDateString("fr-FR", { month: 
 
 
 <div class="flex flex-col items-start rounded-xl gap-2 p-2 -ml-2 transition-all ease-in duration-300 group-hover:not-hover:opacity-20 sm:items-center sm:flex-row sm:gap-4">
-  <div class="size-16 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg ">
-    <Image src={companyLogo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-12 object-cover object-center" />
+  <div class="size-16 bg-neutral-200 dark:bg-neutral-800 flex items-center justify-center rounded-lg overflow-hidden ">
+    <Image src={companyLogo} alt="Logo de Victor Lebecq" width="100" height="100" class="w-full h-auto object-cover object-center" />
   </div>
   <span class="text-xs/4 sm:order-3">{displayedStartDate} - {displayedEndDate}</span>
   <div class="flex-1">
