--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,7 +46,7 @@ const experiences = await getCollection('experiences');
 
   <div class="mt-12 sm:mt-16">
     <h2 class="text-neutral-500 mb-6">[ Catch me if you can ]</h2>
-    <p>Une question ? Un projet ? Trouvez moi sur mes différents réseaux</p>
+    <p>Une question ? Un projet ? Trouvez moi sur mes différents réseaux ou par <a href="mailto:victor.lebecq.pro@gmail.com" class="font-bold">mail</a>.</p>
     <SocialLinks />
 	</div>
 </Layout>
