--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,6 @@
 ---
 import { Image } from "astro:assets";
 
-import Shortcut from "@/components/ui/Shortcut.astro";
-
 import logo from "@/assets/Logo_3D.png"
 import LauncherButton from "./Launcher/LauncherButton.astro";
 
@@ -13,7 +11,7 @@ import LauncherButton from "./Launcher/LauncherButton.astro";
       <Image src={logo} alt="Logo de Victor Lebecq" width="100" height="100" class="size-6 object-cover object-center" />
     </a>
     <nav>
-      <ul class="flex items-center gap-3 sm:gap-4">
+      <ul class="flex items-center gap-3 text-base/4 sm:gap-4">
         <li class="p-1">
           <LauncherButton />
         </li>
