--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -2,6 +2,7 @@
 import { getCollection, render } from "astro:content";
 
 import Layout from "@/layouts/Layout.astro";
+import Tag from "@/components/ui/Tag.astro";
 
 
 export async function getStaticPaths() {
@@ -26,6 +27,11 @@ const formatedDate = new Date(date).toLocaleDateString("fr-FR");
 <Layout>
   <h1 class="text-2xl">{title}</h1>
 	<h4 class="text-neutral-500">Publié le {formatedDate}</h4>
+  <ul class="space-x-2 mt-2">
+    {tags.map((tag) => (
+      <Tag label={tag} />
+    ))}
+  </ul>
   
   <div id="article-content" class="group mt-12 sm:mt-16">
     <Content  />
